--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=chat-app-backend
 
-spring.data.mongodb.uri=mongodb://localhost:27017/chat
+spring.data.mongodb.uri=mongodb+srv://Everestp:Kaiseho@12@cluster0.0yp4r.mongodb.net/
