--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,15 @@
 version: '3.8'
 
 services:
-  mongo:
-    image: mongo:5.0
-    container_name: mongodb
-    ports:
-      - "27018:27017"
-    volumes:
-      - mongo-db:/data/db
-    networks:
-      - app-network
-
   boot-app:
-    image: everestp/chat-app-backend0
+    image: everestp/chat-app-backend01
     build:
       context: .
       dockerfile: Dockerfile
     environment:
-      - SPRING_DATA_MONGODB_URI=mongodb://mongo:27018/chat
-    depends_on:
-      - mongo
+      - SPRING_DATA_MONGODB_URI=mongodb+srv://everest12:<Kaiseho@12@cluster0.o6rw2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
     networks:
       - app-network
 
-volumes:
-  mongo-db:
-
 networks:
-  app-network:
+  app-network:  # ✅ Make sure this is present at the bottom
