--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - SPRING_DATA_MONGODB_URI = mongodb+srv://everest12:Kaiseho%4012@cluster0.o6rw2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+      - SPRING_DATA_MONGODB_URI = mongodb+srv://everest12:Kaiseho@12@cluster0.o6rw2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
     networks:
       - app-network
 
