--- a/pom.xml
+++ b/pom.xml
@@ -32,13 +32,20 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-			 <version>3.4.4</version>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
 
-		 
-   
+<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+			 <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.14</version>
+    </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
