--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=chat-app-backend
 
-spring.data.mongodb.uri= mongodb+srv://everestp:1234@cluster0.0yp4r.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
-spring.data.mongodb.database=chatapp
+
+spring.datasource.url=jdbc:mysql://localhost:3306/chat
+spring.datasource.username=root
+spring.datasource.password=3149
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
